@@ -293,6 +293,7 @@ AC_CHECK_FUNC([sinh], ,
 
 dnl optional functions
 AC_CHECK_FUNCS([strcasestr strerror_r syslog])
+AC_CHECK_FUNCS([getrlimit pthread_attr_getstacksize])
 AX_CHECK_UNAME_SYSCALL
 
 dnl MIME magic
